--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Wcus-amp</h1>
+        <h1>WCUS-AMP Plugin</h1>
         <p>Code Samples for WCUS AMP Presentation</p>
+        <img src="/img/amp-and-wp-header.jpg" />
 
         <p class="view"><a href="https://github.com/johnregan3/wcus-amp">View the Project on GitHub <small>johnregan3/wcus-amp</small></a></p>
 
