--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <p>
-          <img src="https://github.com/johnregan3/wcus-amp/blob/gh-pages/img/amp-and-wp-header.jpg" />
+          <img src="https://raw.githubusercontent.com/johnregan3/wcus-amp/gh-pages/img/amp-and-wp-header.jpg" />
         </p>
       </section>
       <footer>
