--- a/index.html
+++ b/index.html
@@ -31,13 +31,17 @@
         <p>
           <img src="https://raw.githubusercontent.com/johnregan3/wcus-amp/gh-pages/img/amp-and-wp-header.jpg" />
         </p>
+        <h3>Overview</h3>
+        <p>
+          This repo includes both a fully-functional plugin that displays how to customize the default template provided by Automattic's AMP plugin, as well as many code samples showing how you can do this in your own projects.
+        </p>
+        <p>[Slides for this talk are available here](http://bit.ly/WCUS-AMP).</p>
+        <h3>Detail</h3>
+        <p>The main plugin file, `wcus-amp.php`, contains documentation and basic functions to help you add AMP support to your WordPress theme.</p>
+        <p>`/samples` is a directory of example usage of each piece of functionality, including some that aren't used in the plugin itself.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/johnregan3">johnregan3</a></p>
-        <ul>
-          <li><a href="http://johnregan3.wordpress.com">Website</a></li>
-          <li><a href="http://twitter.com/johnregan3">Twitter</a></li>
-          <li><a href="https://profiles.wordpress.org/johnregan3">WordPress.org</a></li>
+        <p>This project is maintained by <a href="https://github.com/johnregan3">johnregan3</a><br /><a href="http://johnregan3.wordpress.com">Website</a> | <a href="http://twitter.com/johnregan3">Twitter</a> | <a href="https://profiles.wordpress.org/johnregan3">WP.org</a></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
