--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </p>
         <p>This plugin is written for a planned talk at WCUS.  <a href="http://bit.ly/WCUS-AMP">Slides for this talk are available here</a>.</p>
         <h3>Detail</h3>
-        <p>The main plugin file, `wcus-amp.php`, contains documentation and basic functions to help you add AMP support to your WordPress theme.</p>
+        <p>The main plugin file, <code>wcus-amp.php</code>, contains documentation and basic functions to help you add AMP support to your WordPress theme.</p>
         <p>`/samples` is a directory of example usage of each piece of functionality, including some that aren't used in the plugin itself.</p>
       </section>
       <footer>
