--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </p>
         <p>This plugin is written for a planned talk at WCUS.  <a href="http://bit.ly/WCUS-AMP">Slides for this talk are available here</a>.</p>
         <h3>Detail</h3>
-        <p>The main plugin file, `wcus-amp.php`, contains documentation and basic functions to help you add AMP support to your WordPress theme.</p>
-        <p>`/samples` is a directory of example usage of each piece of functionality, including some that aren't used in the plugin itself.</p>
+        <p>The main plugin file, <code>wcus-amp.php</code>, contains documentation and basic functions to help add AMP support to your WordPress theme.</p>
+        <p><code>`/samples`</code> is a directory of example usage of each piece of functionality, including some that aren't used in the plugin itself.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/johnregan3">johnregan3</a><br /><small><a href="http://johnregan3.wordpress.com">Website</a> | <a href="http://twitter.com/johnregan3">Twitter</a> | <a href="https://profiles.wordpress.org/johnregan3">WP.org</a></small></p>
