Adding avatar image

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         <p><a href="https://github.com/johnregan3/wcus-amp/tree/master/samples"><code>`/samples`</code></a> is a directory of example usage of each piece of functionality, including some that aren't used in the plugin itself.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/johnregan3">johnregan3</a><br /><small><a href="http://johnregan3.wordpress.com">Website</a> | <a href="http://twitter.com/johnregan3">Twitter</a> | <a href="https://profiles.wordpress.org/johnregan3">WP.org</a></small></p>
+        <p>This project is maintained by <a href="https://github.com/johnregan3">johnregan3</a><br /><small><a href="http://johnregan3.wordpress.com">Website</a> | <a href="http://twitter.com/johnregan3">Twitter</a> | <a href="https://profiles.wordpress.org/johnregan3">WP.org</a></small><br /><img src="https://raw.githubusercontent.com/johnregan3/wcus-amp/gh-pages/img/amp-and-wp-header.jpg" /></p>
+
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
