--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>WCUS-AMP Code Samples by johnregan3</title>
+    <title>WCUS AMP Code Samples by johnregan3</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>WCUS-AMP Plugin</h1>
-        <p>Plugin and Code Samples for WCUS AMP Presentation</p>
+        <h1>WCUS AMP Plugin</h1>
+        <p>Plugin and Code Samples for a WCUS AMP Presentation</p>
 
         <p class="view"><a href="https://github.com/johnregan3/wcus-amp">View the Project on GitHub <small>johnregan3/wcus-amp</small></a></p>
 
@@ -35,10 +35,10 @@
         <p>
           This repo includes both a fully-functional plugin that demonstrates how to customize the default template provided by Automattic's AMP plugin, as well as many code samples showing how you can do this in your own projects.
         </p>
-        <p>This plugin is written for a planned talk at WCUS.  <a href="http://bit.ly/WCUS-AMP">Slides for this talk are available here</a>.</p>
+        <p>This plugin is written for a planned talk at <a href="https://2016.us.wordcamp.org/">WordCamp US</a>.  <a href="http://bit.ly/WCUS-AMP">Slides for this talk are available here</a>.</p>
         <h3>Detail</h3>
         <p>The main plugin file, <a href="https://github.com/johnregan3/wcus-amp/blob/master/wcus-amp.php"><code>wcus-amp.php</code></a>, contains documentation and basic functions to help add AMP support to your WordPress theme.</p>
-        <p><a href="https://github.com/johnregan3/wcus-amp/tree/master/samples"><code>`/samples`</code></a> is a directory of example usage of each piece of functionality, including some that aren't used in the plugin itself.</p>
+        <p><a href="https://github.com/johnregan3/wcus-amp/tree/master/samples"><code>/samples</code></a> is a directory of example usage of each piece of functionality, including some that aren't used in the plugin itself.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/johnregan3">johnregan3</a><br /><small><a href="http://johnregan3.wordpress.com">Website</a> | <a href="http://twitter.com/johnregan3">Twitter</a> | <a href="https://profiles.wordpress.org/johnregan3">WP.org</a></small><br /><img src="https://raw.githubusercontent.com/johnregan3/wcus-amp/gh-pages/img/amp-and-wp-header.jpg" /></p>
