--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>WCUS AMP Plugin</h1>
-        <p>Plugin and Code Samples for a WCUS AMP Presentation</p>
+        <h1>WordCamp US AMP Plugin</h1>
+        <p>Plugin and Code Samples for a WordCamp US Presentation about <a href="http://ampproject.org">AMP</a></p>
 
         <p class="view"><a href="https://github.com/johnregan3/wcus-amp">View the Project on GitHub <small>johnregan3/wcus-amp</small></a></p>
 
