--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>WordCamp US AMP Plugin</h1>
-        <p>Plugin and Code Samples for a WordCamp US Presentation about <a href="http://ampproject.org">AMP</a></p>
+        <p>Plugin and Code Samples for a proposed WordCamp US Presentation about <a href="http://ampproject.org">AMP</a></p>
 
         <p class="view"><a href="https://github.com/johnregan3/wcus-amp">View the Project on GitHub <small>johnregan3/wcus-amp</small></a></p>
 
@@ -39,6 +39,9 @@
         <h3>Detail</h3>
         <p>The main plugin file, <a href="https://github.com/johnregan3/wcus-amp/blob/master/wcus-amp.php"><code>wcus-amp.php</code></a>, contains documentation and basic functions to help add AMP support to your WordPress theme.</p>
         <p><a href="https://github.com/johnregan3/wcus-amp/tree/master/samples"><code>/samples</code></a> is a directory of example usage of each piece of functionality, including some that aren't used in the plugin itself.</p>
+        <h3>Installation</h3>
+        <p>This plugin installs just as any typical WordPress plugin.  Place it in your plugins directory, then navigate to Plugins in the WP admin menu, then Activate it.</a></p>
+        <p><em>Note that this plugin requires the <a href="http://wordpress.org/plugins/amp">AMP Plugin</a> by Automattic to function.</em></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/johnregan3">johnregan3</a><br /><img src="https://raw.githubusercontent.com/johnregan3/wcus-amp/gh-pages/img/johnregan3.jpg" /><br /><small><a href="http://johnregan3.wordpress.com">Website</a> | <a href="http://twitter.com/johnregan3">Twitter</a> | <a href="https://profiles.wordpress.org/johnregan3">WP.org</a></small></p>
