--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p><em>Note that this plugin requires the <a href="http://wordpress.org/plugins/amp">AMP Plugin</a> by Automattic to function.</em></p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/johnregan3">johnregan3</a><br /><img src="https://raw.githubusercontent.com/johnregan3/wcus-amp/gh-pages/img/johnregan3.jpg" /><small><a href="http://johnregan3.wordpress.com">Website</a> | <a href="http://twitter.com/johnregan3">Twitter</a> | <a href="https://profiles.wordpress.org/johnregan3">WP.org</a></small></p>
+        <p>This project is maintained by <a href="https://github.com/johnregan3">johnregan3</a><br /><img src="https://raw.githubusercontent.com/johnregan3/wcus-amp/gh-pages/img/johnregan3.jpg" style="vertical-align: text-top;" />&nbsp;&nbsp;<small><a href="http://johnregan3.wordpress.com">Website</a> | <a href="http://twitter.com/johnregan3">Twitter</a> | <a href="https://profiles.wordpress.org/johnregan3">WP.org</a></small></p>
 
       </footer>
     </div>
