--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>
           This repo includes both a fully-functional plugin that demonstrates how to customize the default template provided by Automattic's AMP plugin, as well as many code samples showing how you can do this in your own projects.
         </p>
-        <p>This plugin is written for a planned talk at <a href="https://2016.us.wordcamp.org/">WordCamp US</a>.  <a href="http://bit.ly/WCUS-AMP">Slides for this talk are available here</a>.</p>
+        <p>This plugin is written for a planned talk at <a href="https://2016.us.wordcamp.org/">WordCamp US</a>.<br /><a href="http://bit.ly/WCUS-AMP">Slides for this talk are available here</a>.</p>
         <h3>Detail</h3>
         <p>The main plugin file, <a href="https://github.com/johnregan3/wcus-amp/blob/master/wcus-amp.php"><code>wcus-amp.php</code></a>, contains documentation and basic functions to help add AMP support to your WordPress theme.</p>
         <p><a href="https://github.com/johnregan3/wcus-amp/tree/master/samples"><code>/samples</code></a> is a directory of example usage of each piece of functionality, including some that aren't used in the plugin itself.</p>
